#70 added eth1 docs
